Upgrade to new major dependency versions (#679)
- Updates JDK version of APP module to JDK 17
- Fixes EC signature cryptography issue caused by deprecation of secp256k1
- Updates Spring Boot to latest
- Updates Spring to latest
- Updates Tomcat to latest
- Updates Logback to latest
- Updates Hibernate validator to latest
- Replaces javax.* packages with jakarta.* in imports
- Updates controller mappings to have them present with and without trailing slash
- Adds new test to verify that both request mapping variants are present every time
- Converts some classes to records
- Replaces unnecessary getters with Lombok Getter
- Starts using toList() collector where possible
- Replaces Spring dependencies with Picocontainer in Cucumber tests
- Updates Docker base image to use latest JRE 17
- Updates readmes to indicate accurate Java version of each artifact

Resolves #373
{major}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>